# pinentry

./: Makefile.am  NEWS  configure.ac
build-aux/: config.rpath
gtk-4/: Makefile.am  pinentry-gtk.c
m4/: ChangeLog  Makefile.am  curses.m4  libassuan.m4
pinentry/: pinentry.c  pinentry.h
qt/: pinentrydialog.cpp  pinentrydialog.h
qt5/: pinentrydialog.cpp  pinentrydialog.h
qt5/icons/: Makefile.am
